# word-judge

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
src/: cfg.py  main.py  wordjudge.ipynb
src/app/: app.py  docs.py  home.py  main.py  utils.py
src/data/: data.py  dataprocessing.ipynb  nlp.py
src/tui/: home.py
