[project]
name = "word-judge"
version = "0.1.0"
description = "This is a ia-text-detector for the MLE course project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "jax>=0.4.37",
    "nltk>=3.9.1",
    "polars>=1.17.1",
    "transformers>=4.47.1",
    "polars>=1.17.1",
]

[dependency-groups]
dev = [
    "setuptools>=75.6.0",
    "pre-commit==4.0.1",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
wordjudge = "src.main:main"

[tool.setuptools.packages]
find = {}

[tool.ruff]

fix = true
show-fixes = true

include = ["pyproject.toml", "src/**/*.py", "src/**/*.ipynb", "scripts/**/*.py"]

[tool.ruff.lint]

ignore = ["F841","E203","E501"]

[tool.ruff.format]

docstring-code-format = true
